objects/EIN__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>EIN</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bluestar_Transfer_Status__c</fullName>
        <label>Bluestar Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due for Transfer</fullName>
                    <default>true</default>
                    <label>Due for Transfer</label>
                </value>
                <value>
                    <fullName>Transfer In Transit</fullName>
                </value>
                <value>
                    <fullName>Transfer Complete</fullName>
                </value>
                <value>
                    <fullName>Seq# Requested</fullName>
                </value>
                <value>
                    <fullName>Seq# updated</fullName>
                </value>
                <value>
                    <fullName>Wait BS Confirm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADD</fullName>
                    <default>true</default>
                    <label>ADD</label>
                </value>
                <value>
                    <fullName>CHG</fullName>
                </value>
                <value>
                    <fullName>END</fullName>
                </value>
                <value>
                    <fullName>ERR</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>ENDSENT</fullName>
                </value>
                <value>
                    <fullName>null</fullName>
                    <isActive>false</isActive>
                    <label>null</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country1__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Code1__c</fullName>
        <label>County Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN_Sequence_Number__c</fullName>
        <label>BlueStar EIN Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Setting any EIN as Primary will clear any other EIN which is already set as Primary for that Account.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Effective_Date__c</fullName>
        <description>Hidden field to record the effective date already transmitted to BlueStar. This will be used in trigger for validation.</description>
        <label>Sent Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street11__c</fullName>
        <label>Street 1</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street21__c</fullName>
        <label>Street 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code1__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Employer Identification Number</label>
    <nameField>
        <label>Employer Identification Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employer Identification Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckEINNumericLength9</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT(ISNUMBER( Name )))  || 	
(LEN( Name ) &lt;&gt; 9)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>EIN has to be numeric value of length 9.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DoNotEndPrimary</fullName>
        <active>true</active>
        <description>This validation rule will not allow End Date to be updated for an EIN having Primary flag marked.</description>
        <errorConditionFormula>Primary__c == true &amp;&amp;
 NOT( ISNULL( End_Date__c ) )</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Primary EIN cannot be ended. Please mark another EIN related to this Account as Primary before populating End Date for this EIN.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIN_should_not_have_HCSC_value</fullName>
        <active>true</active>
        <errorConditionFormula>Name  =  TEXT(361236610)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please do not use HCSC&apos;s EIN.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateGreater</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW() || ISPICKVAL(Change_Reason__c, &apos;ADD&apos;) 
|| ISPICKVAL(Change_Reason__c, &apos;CHG&apos;))
&amp;&amp; (End_Date__c &lt; Effective_Date__c || 
End_Date__c &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Please ensure that End Date is greater than Effective Date, and is not in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndedEIN</fullName>
        <active>true</active>
        <description>Do not allow changes to any field when an EIN is marked as Ended.</description>
        <errorConditionFormula>( NOT(ISBLANK( End_Date__c ))) &amp;&amp; (
 ISCHANGED(Account__c) ||
 ISCHANGED(EIN_Sequence_Number__c) ||
 ISCHANGED(Effective_Date__c) ||
 ISCHANGED(Street11__c) ||
 ISCHANGED(Street21__c) ||
 ISCHANGED(City1__c) ||
 ISCHANGED(State1__c) ||
 ISCHANGED(Zip_Code1__c) ||
 ISCHANGED(County_Code1__c) ||
 ISCHANGED(Country1__c) ||
 ISCHANGED(Location_Name__c) ||
 ISCHANGED( Name ) ||
 ISCHANGED(Primary__c))</errorConditionFormula>
        <errorMessage>Please do not change any field for EIN having End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InvalidEIN</fullName>
        <active>true</active>
        <description>Do not allow repeating number or consecutive number for EIN.</description>
        <errorConditionFormula>Name = &apos;111111111&apos; ||
 Name = &apos;222222222&apos; ||
 Name = &apos;333333333&apos; ||
 Name = &apos;444444444&apos; ||
 Name = &apos;555555555&apos; ||
 Name = &apos;666666666&apos; ||
 Name = &apos;777777777&apos; ||
 Name = &apos;888888888&apos; ||
 Name = &apos;999999999&apos; ||
 Name = &apos;000000000&apos; ||
 Name = &apos;123456789&apos; ||
 Name = &apos;012345678&apos; ||
 Name = &apos;098765432&apos; ||
 Name = &apos;987654321&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please do not enter repeating or sequential numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoEndDateDuringAddChange</fullName>
        <active>true</active>
        <errorConditionFormula>( ISNEW() || ISPICKVAL(Change_Reason__c, &apos;ADD&apos;) 
|| ISPICKVAL(Change_Reason__c, &apos;CHG&apos;)
|| ISPICKVAL(Change_Reason__c, &apos;ERR&apos;)) 
&amp;&amp; NOT(ISNULL( End_Date__c ))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Please do not fill End Date until the EIN updates are transmitted to BlueStar.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoNameChange</fullName>
        <active>true</active>
        <errorConditionFormula>(NOT(ISNEW())  &amp;&amp;  NOT(ISPICKVAL(Change_Reason__c, &apos;ADD&apos;))) &amp;&amp; 
ISCHANGED( Name )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Employer Identification Number cannot be changed once transmitted to BlueStar.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SendingEIN</fullName>
        <active>true</active>
        <description>Do not allow changes to any field while transmission is in progress.</description>
        <errorConditionFormula>(  ISPICKVAL(Bluestar_Transfer_Status__c, &apos;Transfer In Transit&apos;)  || 
ISPICKVAL(Bluestar_Transfer_Status__c, &apos;Seq# updated&apos;)  ||
ISPICKVAL(Bluestar_Transfer_Status__c, &apos;Wait BS Confirm&apos;)  ||
ISPICKVAL(Bluestar_Transfer_Status__c, &apos;Seq# Requested&apos;)  ) &amp;&amp; (
 ISCHANGED(Account__c) ||
 ISCHANGED(Effective_Date__c) ||
 ISCHANGED(Street11__c) ||
 ISCHANGED(Street21__c) ||
 ISCHANGED(City1__c) ||
 ISCHANGED(State1__c) ||
 ISCHANGED(Zip_Code1__c) ||
 ISCHANGED(County_Code1__c) ||
 ISCHANGED(Country1__c) ||
 ISCHANGED(Location_Name__c) ||
 ISCHANGED(Name) ||
 ISCHANGED(End_Date__c) ||
 ISCHANGED(Primary__c))</errorConditionFormula>
        <errorMessage>This EIN is being transmitted to BlueStar. No changes are allowed at this point of time. If the issue persists for more than an hour, please reach out to IT support.</errorMessage>
    </validationRules>
</CustomObject>